--- a/package.json
+++ b/package.json
@@ -54,15 +54,17 @@
     "eslint-plugin-vue": "^7.10.0",
     "minimist": "^1.2.5",
     "prettier": "^2.3.1",
-    "rollup": "^2.50.6",
+    "rollup": "^2.51.1",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-vue": "^5.1.9",
-    "vue": "^2.6.13",
-    "vue-template-compiler": "^2.6.13"
+    "vue": "^2.6.14",
+    "vue-template-compiler": "^2.6.14"
+  },
+  "dependencies": {
+    "bwip-js": "^3.0.0"
   },
   "peerDependencies": {
-    "vue": "^2.6.12",
-    "bwip-js": "^3.0.0"
+    "vue": "^2.6.12"
   },
   "engines": {
     "node": ">=12"
